fix: paragraph overflowing when word break is not enabled (#65)
* fix: paragraph overflowing when word break is not enabled

* fix: removed manual max width

--- a/package/styles/index.css
+++ b/package/styles/index.css
@@ -75,3 +75,7 @@ li > ol > li > ol > li:before {
 .tooltip:before {
   z-index: 999;
 }
+
+.node-view-content > div {
+  word-break: break-all;
+}
